style: updated style

--- a/src/Component/styles.css
+++ b/src/Component/styles.css
@@ -120,3 +120,35 @@ span {
   font-weight: bold;
   color: blueviolet;
 }
+
+@media only screen and (min-width: 600px) {
+  .main {
+    width: 600px;
+    margin: 50px auto;
+    border: 1px solid blueviolet;
+    border-radius: 1rem;
+    margin-top: 50px;
+    letter-spacing: 0.5px;
+  }
+  h1 {
+    letter-spacing: 1.5px;
+  }
+  .widget {
+    width: 400px;
+    margin: 50px auto;
+  }
+
+  .icon {
+    width: 80px;
+  }
+  .temp {
+    font-size: 20px;
+  }
+  .description {
+    font-size: 20px;
+  }
+  .date {
+    font-size: 19px;
+    align-self: auto;
+  }
+}
