--- a/src/Component/styles.css
+++ b/src/Component/styles.css
@@ -121,34 +121,12 @@ span {
   color: blueviolet;
 }
 
-@media only screen and (min-width: 600px) {
-  .main {
-    width: 600px;
-    margin: 50px auto;
-    border: 1px solid blueviolet;
-    border-radius: 1rem;
-    margin-top: 50px;
-    letter-spacing: 0.5px;
-  }
-  h1 {
-    letter-spacing: 1.5px;
-  }
+@media only screen and (max-width: 600px) {
   .widget {
-    width: 400px;
-    margin: 50px auto;
-  }
-
-  .icon {
-    width: 80px;
-  }
-  .temp {
-    font-size: 20px;
-  }
-  .description {
-    font-size: 20px;
-  }
-  .date {
-    font-size: 19px;
-    align-self: auto;
+    border: 1px solid blueviolet;
+    width: fit-content;
+    margin-bottom: 30px;
+    padding: 40px 30px;
+    border-radius: 1.5rem;
   }
 }
